# jasmine

./: .gitignore  README-zh.md  README.md  pubspec.yaml
.github/workflows/: Build.yml  BuildForOhos.yml  Release.yml  ReleaseForOhos.yml
android/: settings.gradle
android/app/: build.gradle
ci/: Cargo.toml  version.code.txt  version.info.txt
ci/src/check_asset/: main.rs
ci/src/check_release/: main.rs
ci/src/community_notify/: main.rs
ci/src/upload_asset/: main.rs
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/basic/: commons.dart  desktop.dart  entities.dart  methods.dart  navigatior.dart  platform.dart  web_dav_sync.dart
lib/configs/: Authentication.dart  DesktopAuthenticationScreen.dart  android_display_mode.dart  android_version.dart  app_font_size.dart  app_orientation.dart  auto_clean.dart  categories_sort.dart  configs.dart  display_jmcode.dart  download_and_export_to.dart  download_thread_count.dart  export_path.dart  export_rename.dart  ignore_upgrade_pop.dart  ignore_view_log.dart  import_notice.dart  is_pro.dart  login.dart  network_api_host.dart  network_cdn_host.dart  no_animation.dart  pager_column_number.dart  pager_controller_mode.dart  pager_cover_rate.dart  pager_view_mode.dart  passed.dart  proxy.dart  reader_controller_type.dart  reader_direction.dart  reader_slider_position.dart  reader_type.dart  search_title_words.dart  theme.dart  two_page_direction.dart  using_right_click_pop.dart  versions.dart  volume_key_control.dart  web_dav_password.dart  web_dav_sync_switch.dart  (+2 more)
lib/screens/: about_screen.dart  app_screen.dart  browser_screen.dart  calculator_screen.dart  comic_download_screen.dart  comic_info_screen.dart  comic_reader_screen.dart  comic_search_screen.dart  comments_screen.dart  download_album_screen.dart  (+18 more)
linux/: CMakeLists.txt  main.cc  methods_plugin.cc  methods_plugin.h  my_application.cc
native/jmbackend/: .gitignore  Cargo.toml
native/jmbackend/src/: define.rs  download.rs  export.rs  lib.rs  sync.rs  tools.rs  types.rs
native/jmbackend/src/database/: mod.rs  utils.rs
native/jmbackend/src/database/active_db/: dl_album.rs  dl_chapter.rs  dl_image.rs  mod.rs  search_history.rs  view_log.rs  view_log_tag.rs
native/jmbackend/src/database/image_cache_db/: image_cache.rs  mod.rs
native/jmbackend/src/database/property_db/: migrations.rs  mod.rs  property.rs
native/jmbackend/src/database/web_cache_db/: mod.rs  web_cache.rs
native/jmcomic-rs/: .gitignore  Cargo.toml
native/jmcomic-rs/src/: entities.rs  lib.rs  tests.rs  tools.rs
ohos/: .gitignore  hvigorfile.ts  oh-package.json5
pdfium/: Package.swift
scripts/: ohos-native.sh  ohos-pubspec.yaml  ohos.images.bak  sign-apk-github-actions.sh
test/: widget_test.dart
windows/: CMakeLists.txt
(+62 files in other folders)
