[package]
name = "jmbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmcomic = { path = "../jmcomic-rs" }
lazy_static = "1.4.0"
sea-orm = { version = "0.12.4", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
sea-orm-migration = { version = "0.12.4", features = ["sqlx-sqlite", "runtime-tokio-rustls"], default-features = false }
chrono = "0.4.31"
libc = "0.2.149"
bytes = "1.5.0"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["socks", "stream", "rustls", "tokio-rustls", "rustls-tls"], default-features = false }
hex = "0.4.3"
md5 = "0.7.0"
image = { version = "0.24.7", features = ["png", "jpeg", "bmp", "gif", "webp"] }
rand = "0.8.5"
itertools = "0.11.0"
async-trait = "0.1.74"
anyhow = "1.0.75"
rsa = "0.6.1"
base64 = "0.13.0"
once_cell = "1.18.0"
regex = "1.10.2"
num-iter = "0.1.43"
futures-util = "0.3.29"
grouping_by = "0.2.2"
tokio-util = { version = "0.7.10", features = ["full"] }
async_zip = { version = "0.0.9", features = ["deflate"], default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_derive = "1.0.190"
serde_json = "1.0.108"

[features]
